--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-media-devices": "^1.1.5",
     "react-zxing": "^2.0.0",
+    "scanqr-zxing": "file:",
     "sweetalert2": "^11.10.8"
   },
   "devDependencies": {
